--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; /* horizontally */
+  padding-top: 10vh;
 }
 
-.App-link {
-  color: #61dafb;
+.Board {
+  display: flex;
+  flex-wrap: wrap;
+  height: 50vmin;
+  width: 50vmin;
+  margin: 0;
+  background: green;
+  border: 1px solid rgb(0, 0, 0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Tile {
+  position: relative;
+  flex-basis: calc(10%);
+  border: 1px solid rgb(31, 31, 31);
+  box-sizing: border-box;
+  max-height: 10%;
+  max-width: 10%;
+  min-height: 10%;
+  min-width: 10%;
+  height: 10%;
+  width: 10%;
+}
+
+.TileSelector {
+  background: purple;
+  border: 5px solid rgb(0, 0, 0);
+  height: calc(
+    50vmin - 10px + 2px
+  ); /* height of Board (50vmin) - border * 2 (5px * 2 = 10px) 
+        + Board border * 2 (1px * 2) */
+  width: 10vmin;
 }
