--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,30 @@
 }
 
 .TileSelector {
-  background: purple;
+  background: rgb(51, 51, 51);
   border: 5px solid rgb(0, 0, 0);
   height: calc(
     50vmin - 10px + 2px
-  ); /* height of Board (50vmin) - border * 2 (5px * 2 = 10px) 
-        + Board border * 2 (1px * 2) */
-  width: 10vmin;
+    ); /* height of Board (50vmin) - border * 2 (5px * 2 = 10px) 
+    + Board border * 2 (1px * 2) */
+    width: 10vmin;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: auto;
+}
+
+.start-btn {
+  background-color: #0099ff;
+  margin: 10%;
+}
+
+.goal-btn {
+  background-color: #fbff00;
+  margin: 10%;
+}
+
+.wall-btn {
+  background-color: #cc00ff;
+  margin: 10%;
 }
