--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
   border: 1px solid rgb(0, 0, 0);
 }
 
-.Tile {
+%Tile {
   position: relative;
   flex-basis: calc(10%);
   border: 1px solid rgb(31, 31, 31);
@@ -32,17 +32,54 @@
 }
 
 .TileSelector {
-  background: rgb(51, 51, 51);
-  border: 5px solid rgb(0, 0, 0);
+  background-color: rgb(51, 51, 51);
+  border: 2px solid rgb(0, 0, 0);
+  border-right: 1px;
   height: calc(
-    50vmin - 10px + 2px
-    ); /* height of Board (50vmin) - border * 2 (5px * 2 = 10px) 
+    50vmin - 4px + 2px
+  ); /* height of Board (50vmin) - border * 2 (5px * 2 = 10px) 
     + Board border * 2 (1px * 2) */
-    width: 10vmin;
+  width: 10vmin;
 
   display: flex;
   flex-direction: column;
   justify-content: auto;
+}
+
+.hover-tile {
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+}
+
+.default-tile {
+  @extend %Tile;
+  background-color: #fff;
+}
+
+.start-tile {
+  @extend %Tile;
+  background-color: #0099ff;
+}
+
+.goal-tile {
+  @extend %Tile;
+  background-color: #fbff00;
+}
+
+.wall-tile {
+  @extend %Tile;
+  background-color: #cc00ff;
+}
+
+.optimal-path-tile {
+  @extend %Tile;
+  background-color: rgb(1, 163, 37);
+}
+
+.suboptimal-path-tile {
+  @extend %Tile;
+  background-color: rgb(15, 240, 228);
 }
 
 .start-btn {
